musubi.h

#define MU_VERSION_MAJOR 0
#define MU_VERSION_MINOR 5
#define MU_VERSION_PATCH 0
#define MU_CHUNK_MAX_SIZE  63
#define MU_COLOR_CODE_SIZE 32
#define MU_ERRPARAM (-1) 
#define MU_ERRSRC   (-2) 
#define MU_ERRLINE  (-3) 
#define MU_ERRFILE  (-4) 
MU_NS_BEGIN
typedef enum mu_Level { MU_ERROR, MU_WARNING, MU_CUSTOM_LEVEL } mu_Level;
typedef enum mu_IndexType { MU_INDEX_BYTE, MU_INDEX_CHAR } mu_IndexType;
typedef enum mu_LabelAttach {
    MU_ATTACH_MIDDLE,
    MU_ATTACH_START,
    MU_ATTACH_END
} mu_LabelAttach;
typedef enum mu_ColorKind {
    MU_COLOR_RESET,
    MU_COLOR_ERROR,
    MU_COLOR_WARNING,
    MU_COLOR_KIND,
    MU_COLOR_MARGIN,
    MU_COLOR_SKIPPED_MARGIN,
    MU_COLOR_UNIMPORTANT,
    MU_COLOR_NOTE,
    MU_COLOR_LABEL
} mu_ColorKind;
typedef enum mu_Draw {
    MU_DRAW_SPACE,
    MU_DRAW_NEWLINE,
    MU_DRAW_LBOX,
    MU_DRAW_RBOX,
    MU_DRAW_COLON,
    MU_DRAW_HBAR,
    MU_DRAW_VBAR,
    MU_DRAW_XBAR,
    MU_DRAW_VBAR_GAP,
    MU_DRAW_LINE_MARGIN,
    MU_DRAW_UARROW,
    MU_DRAW_RARROW,
    MU_DRAW_LTOP,
    MU_DRAW_MTOP,
    MU_DRAW_RTOP,
    MU_DRAW_LBOT,
    MU_DRAW_MBOT,
    MU_DRAW_RBOT,
    MU_DRAW_LCROSS,
    MU_DRAW_RCROSS,
    MU_DRAW_LUNDERBAR,
    MU_DRAW_MUNDERBAR,
    MU_DRAW_RUNDERBAR,
    MU_DRAW_SUNDERBAR,
    MU_DRAW_UNDERLINE,
    MU_DRAW_ELLIPSIS,
    MU_DRAW_COUNT
} mu_Draw;
typedef unsigned    mu_Id;
typedef const char *mu_Chunk; 
typedef struct mu_Report   mu_Report;
typedef struct mu_Config   mu_Config;
typedef struct mu_ColorGen mu_ColorGen;
typedef struct mu_Cache    mu_Cache;
typedef void    *mu_Allocf(void *ud, void *p, size_t nsize, size_t osize);
typedef mu_Chunk mu_Color(void *ud, mu_ColorKind kind);
typedef int      mu_Writer(void *ud, const char *data, size_t len);
typedef struct mu_Slice {
    const char *p, *e;
} mu_Slice;
MU_API mu_Report *mu_new(mu_Allocf *allocf, void *ud);
MU_API void       mu_reset(mu_Report *R);
MU_API void       mu_delete(mu_Report *R);
MU_API int mu_config(mu_Report *R, const mu_Config *config);
MU_API int mu_label(mu_Report *R, size_t start, size_t end, mu_Id src_id);
MU_API int mu_message(mu_Report *R, mu_Slice msg, int width);
MU_API int mu_color(mu_Report *R, mu_Color *color, void *ud);
MU_API int mu_primary(mu_Report *R);
MU_API int mu_order(mu_Report *R, int order);
MU_API int mu_priority(mu_Report *R, int priority);
MU_API int mu_title(mu_Report *R, mu_Level l, mu_Slice custom, mu_Slice msg);
MU_API int mu_code(mu_Report *R, mu_Slice code);
MU_API int mu_help(mu_Report *R, mu_Slice help_msg);
MU_API int mu_note(mu_Report *R, mu_Slice note_msg);
MU_API int mu_writer(mu_Report *R, mu_Writer *writer, void *ud);
MU_API int mu_render(mu_Report *R, const mu_Cache *cache);
typedef mu_Chunk mu_Charset[MU_DRAW_COUNT];
MU_API const mu_Charset *mu_ascii(void);
MU_API const mu_Charset *mu_unicode(void);
MU_API mu_Chunk mu_default_color(void *ud, mu_ColorKind kind);
MU_API void mu_initconfig(mu_Config *config);
struct mu_Config {
    int compact;            
    int cross_gap;          
    int multiline_arrows;   
    int underlines;         
    int minimise_crossings; 
    int align_messages;     
    int context_lines;      
    int tab_width;          
    int limit_width;        
    int ambiwidth;          
    mu_LabelAttach label_attach; 
    mu_IndexType   index_type;   
    mu_Color *color;    
    void     *color_ud; 
    const mu_Charset *char_set; 
};
typedef char mu_ColorCode[MU_COLOR_CODE_SIZE];
MU_API void mu_initcolorgen(mu_ColorGen *cg, float min_brightness);
MU_API void mu_gencolor(mu_ColorGen *cg, mu_ColorCode *out);
MU_API mu_Chunk mu_fromcolorcode(void *ud, mu_ColorKind kind);
struct mu_ColorGen {
    unsigned short state[3];       
    float          min_brightness; 
};
MU_API mu_Cache *mu_newcache(mu_Allocf *allocf, void *ud);
MU_API void      mu_delcache(mu_Cache *C);
MU_API unsigned mu_sourcecount(const mu_Cache *C);
typedef struct mu_Source mu_Source;
MU_API mu_Source *mu_addsource(mu_Cache **pC, size_t size, mu_Slice name);
MU_API mu_Source *mu_addmemory(mu_Cache **pC, mu_Slice data, mu_Slice name);
typedef struct mu_Line mu_Line;
typedef const mu_Line *mu_CL;
MU_API mu_Source *mu_source(mu_Report *R);
MU_API void     mu_updatelines(mu_Source *src, mu_Slice data);
MU_API unsigned mu_linecount(mu_Source *src);
MU_API mu_CL    mu_getline(mu_Source *src, unsigned line_no);
MU_API unsigned mu_lineforchars(mu_Source *src, size_t char_pos, mu_CL *out);
MU_API unsigned mu_lineforbytes(mu_Source *src, size_t byte_pos, mu_CL *out);
typedef struct mu_Allocator {
    void      *ud;     
    mu_Allocf *allocf; 
} mu_Allocator;
struct mu_Cache {
    size_t       size;    
    mu_Allocator alloc;   
    mu_Source  **sources; 
};
struct mu_Source {
    mu_Cache  cache; 
    mu_Cache *self;  
    mu_Slice  name;  
    mu_Line  *lines; 
    int line_no_offset; 
    int inited;         
    int (*init)(mu_Source *src);
    void (*free)(mu_Source *src);
    mu_Slice (*get_line)(mu_Source *src, unsigned line_no);
    mu_CL (*get_line_info)(mu_Source *src, unsigned line_no);
    unsigned (*line_count)(mu_Source *src);
    unsigned (*line_for_chars)(mu_Source *src, size_t char_pos, mu_CL *out);
    unsigned (*line_for_bytes)(mu_Source *src, size_t byte_pos, mu_CL *out);
};
struct mu_Line {
    size_t   offset; 
    size_t   byte_offset; 
    unsigned len; 
    unsigned byte_len; 
    unsigned newline;  
};
typedef struct mu_Label {
    void     *ud;        
    mu_Color *color;     
    mu_Slice  message;   
    size_t    start_pos; 
    size_t    end_pos;   
    mu_Id     src_id;    
    mu_Width  width;     
    int       primary;   
    int       order;     
    int       priority;  
} mu_Label;
typedef struct mu_Group {
    mu_Source    *src;          
    mu_LabelInfo *labels;       
    mu_LabelInfo *multi_labels; 
    mu_LabelInfo  primary;      
    unsigned      first_line;   
    unsigned      last_line;    
} mu_Group;
typedef struct mu_LineLabel {
    mu_CLI info; 
    mu_Col col;  
    int draw_msg; 
} mu_LineLabel;
typedef struct mu_Cluster {
    mu_CL         line;         
    mu_LineLabel  margin_label; 
    mu_LineLabel *line_labels;  
    unsigned arrow_len;     
    mu_Col   min_col;       
    mu_Col   start_col;     
    mu_Col   end_col;       
    mu_Width max_msg_width; 
} mu_Cluster;
struct mu_Report {
    mu_Allocator     alloc;  
    const mu_Config *config; 
    void           *writer_ud;
    mu_Writer      *writer;
    const mu_Label *cur_color_label; 
    mu_ColorKind    cur_color_kind;  
    mu_Label      **sorted_labels;   
    mu_Group       *groups;          
    mu_Cluster     *clusters;        
    mu_LineLabel   *ll_cache;        
    mu_Width       *width_cache;     
    mu_Width        line_no_width;   
    mu_Width        ellipsis_width;  
    const mu_Group   *cur_group;   
    const mu_Cluster *cur_cluster; 
    mu_CL             cur_line;    
    mu_Source        *cur_src;     
    mu_Level  level;        
    mu_Slice  code;         
    mu_Slice  custom_level; 
    mu_Slice  title;        
    mu_Label *labels;       
    mu_Slice *helps;        
    mu_Slice *notes;        
};
MU_API void mu_initcolorgen(mu_ColorGen *cg, float min_brightness) {
    cg->state[0] = 30000, cg->state[1] = 15000, cg->state[2] = 35000;
    cg->min_brightness = min_brightness;
}
MU_API void mu_gencolor(mu_ColorGen *cg, mu_ColorCode *out) {
    float mb, code = 16.f;
    int   i, n;
    if (!cg || !out) return;
    for (i = 0; i < 3; ++i)
        cg->state[i] += (unsigned short)(40503 * (i * 4 + 1130));
    mb = cg->min_brightness;
    code += ((float)cg->state[2] / 65535 * (1 - mb) + mb) * 5.0f;
    code += ((float)cg->state[1] / 65535 * (1 - mb) + mb) * 30.0f;
    code += ((float)cg->state[0] / 65535 * (1 - mb) + mb) * 180.0f;
    n = snprintf(*out + 1, sizeof(mu_ColorCode) - 1, "\x1b[38;5;%dm",
                 (int)code);
    (*out)[0] = (assert((size_t)n <= sizeof(mu_ColorCode) - 1), (char)n);
}
MU_API mu_Chunk mu_fromcolorcode(void *ud, mu_ColorKind k) {
    if (k == MU_COLOR_RESET) return (mu_Chunk) "\x04\x1b[0m";
    return (mu_Chunk)ud;
}
MU_API unsigned mu_sourcecount(const mu_Cache *C)
{ return C ? muS_issrc(C) ? 1 : muA_size(C->sources) : 0; }
MU_API mu_Source *mu_source(mu_Report *R)
{ return R && R->cur_src ? R->cur_src : NULL; }
MU_API unsigned mu_linecount(mu_Source *src)
{ return src ? (unsigned)muA_size(src->lines) : 0; }
MU_API mu_Cache *mu_newcache(mu_Allocf *allocf, void *ud) {
    mu_Allocator alloc = muM_initalloc(allocf, ud);
    mu_Cache    *cache = (mu_Cache *)muM_alloc(&alloc, sizeof(mu_Cache));
    if (!cache) return NULL;
    memset(cache, 0, sizeof(mu_Cache));
    cache->size = sizeof(mu_Cache);
    cache->alloc = alloc;
    return cache;
}
MU_API void mu_delcache(mu_Cache *C) {
    if (!C) return;
    if (muS_issrc(C)) { 
        mu_Source *src = C->sources[0];
        if (src->inited && src->free) src->free(src);
        if (src->lines != NULL) muA_delete(C, src->lines);
    } else {
        unsigned i, size;
        for (i = 0, size = muA_size(C->sources); i < size; ++i)
            mu_delcache(&C->sources[i]->cache);
        muA_delete(C, C->sources);
    }
    muM_free(&C->alloc, C, C->size);
}
MU_API mu_Source *mu_addsource(mu_Cache **pC, size_t size, mu_Slice name) {
    mu_Allocator alloc = pC && *pC ? (*pC)->alloc : muM_initalloc(NULL, NULL);
    mu_Source   *src;
    if (pC && *pC && muS_issrc(*pC)) {
        src = (*pC)->sources[0];
        *pC = mu_newcache(alloc.allocf, alloc.ud);
        if (!*pC) return NULL;
        *muA_push(*pC, (*pC)->sources) = src;
    }
    size = mu_max(size, sizeof(mu_Source));
    src = (mu_Source *)muM_alloc(&alloc, size);
    if (!src) return NULL;
    memset(src, 0, size);
    src->cache.size = size;
    src->cache.alloc = alloc;
    src->cache.sources = (mu_Source **)&src->self;
    src->self = &src->cache;
    src->name = name.p ? name : mu_literal("<unknown>");
    src->get_line_info = mu_getline;
    src->line_count = mu_linecount;
    src->line_for_chars = mu_lineforchars;
    src->line_for_bytes = mu_lineforbytes;
    if (pC && !*pC) *pC = &src->cache;
    else if (pC) *muA_push(*pC, (*pC)->sources) = src;
    return (mu_Source *)src;
}
MU_API void mu_updatelines(mu_Source *src, mu_Slice data) {
    mu_Line *next, *current = muA_last(src->lines);
    if (current == NULL) {
        current = muA_push(&src->cache, src->lines);
        memset(current, 0, sizeof(mu_Line));
    }
    while (data.p < data.e) {
        const char *start = data.p;
        int is_newline = (*data.p == '\n');
        if (is_newline) {
            size_t offset = muM_lineend(current) + 1;
            size_t byte_offset = current->byte_offset + current->byte_len + 1;
            current->newline = 1;
            next = muA_push(&src->cache, src->lines);
            memset(next, 0, sizeof(mu_Line));
            next->offset = offset, next->byte_offset = byte_offset;
            current = next;
        }
        muD_advance(&data);
        if (!is_newline)
            current->len += 1, current->byte_len += (unsigned)(data.p - start);
    }
}
MU_API mu_CL mu_getline(mu_Source *src, unsigned line_no) {
    size_t size = muA_size(src->lines);
    return size ? &src->lines[line_no < size ? line_no : size - 1] : NULL;
}
MU_API unsigned mu_lineforchars(mu_Source *src, size_t char_pos, mu_CL *out) {
    unsigned l = 0, u = muA_size(src->lines);
    while (l < u) {
        unsigned m = l + ((u - l) >> 1);
        if (src->lines[m].offset <= char_pos) l = m + 1;
        else u = m;
    }
    *out = mu_getline(src, l ? l - 1 : 0);
    return l ? l - 1 : 0;
}
MU_API unsigned mu_lineforbytes(mu_Source *src, size_t byte_pos, mu_CL *out) {
    unsigned l = 0, u = muA_size(src->lines);
    while (l < u) {
        unsigned m = l + ((u - l) >> 1);
        if (src->lines[m].byte_offset < byte_pos) l = m + 1;
        else u = m;
    }
    *out = mu_getline(src, l ? l - 1 : 0);
    return l ? l - 1 : 0;
}
typedef struct mu_MemorySource {
    mu_Source base;
    mu_Slice  data;
} mu_MemorySource;
MU_API mu_Source *mu_addmemory(mu_Cache **pC, mu_Slice data, mu_Slice name) {
    mu_MemorySource *msrc =
        (mu_MemorySource *)mu_addsource(pC, sizeof(mu_MemorySource), name);
    if (!msrc) return NULL;
    msrc->data = data;
    msrc->base.init = muS_memory_init;
    msrc->base.get_line = muS_memory_get_line;
    return &msrc->base;
}
MU_API const mu_Charset *mu_ascii(void) { return &muM_ascii_charset; }
MU_API const mu_Charset *mu_unicode(void) { return &muM_unicode_charset; }
MU_API mu_Chunk mu_default_color(void *ud, mu_ColorKind kind) {
    switch ((void)ud, kind) {
    case MU_COLOR_RESET:          return "\x04\x1b[0m";
    case MU_COLOR_ERROR:          return "\x05\x1b[31m";
    case MU_COLOR_WARNING:        return "\x05\x1b[33m";
    case MU_COLOR_KIND:           return "\x0b\x1b[38;5;147m";
    case MU_COLOR_MARGIN:         return "\x0b\x1b[38;5;246m";
    case MU_COLOR_SKIPPED_MARGIN: return "\x0b\x1b[38;5;240m";
    case MU_COLOR_UNIMPORTANT:    return "\x0b\x1b[38;5;249m";
    case MU_COLOR_NOTE:           return "\x0b\x1b[38;5;115m";
    case MU_COLOR_LABEL:          
    default:                      return "\x05\x1b[39m";
    }
}
MU_API void mu_initconfig(mu_Config *config)
{ memcpy(config, &muM_default, sizeof(mu_Config)); }
MU_API int mu_writer(mu_Report *R, mu_Writer *writer, void *ud) {
    if (!R) return MU_ERRPARAM;
    return R->writer = writer, R->writer_ud = ud, MU_OK;
}
MU_API int mu_render(mu_Report *R, const mu_Cache *cache) {
    unsigned i, size, src_count;
    if (!R || !cache) return MU_ERRPARAM;
    if (R->writer == NULL) return MU_OK;
    src_count = mu_sourcecount(cache);
    for (i = 0, size = muA_size(R->labels); i < size; ++i) {
        mu_Label *label = &R->labels[i];
        if (label->src_id >= src_count) return MU_ERRSRC;
    }
    return muR_cleanup(R), muR_report(R, cache);
}
MU_API mu_Report *mu_new(mu_Allocf *allocf, void *ud) {
    mu_Allocator alloc = muM_initalloc(allocf, ud);
    mu_Report   *R = (mu_Report *)muM_alloc(&alloc, sizeof(mu_Report));
    if (!R) return NULL;
    memset(R, 0, sizeof(mu_Report));
    R->alloc = alloc;
    R->config = &muM_default;
    return R;
}
MU_API void mu_reset(mu_Report *R) {
    if (!R) return;
    muR_cleanup(R);
    R->level = MU_ERROR;
    R->code = mu_lslice(NULL, 0);
    R->custom_level = mu_lslice(NULL, 0);
    R->title = mu_lslice(NULL, 0);
    muA_reset(R->labels);
    muA_reset(R->helps);
    muA_reset(R->notes);
}
MU_API void mu_delete(mu_Report *R) {
    if (!R) return;
    mu_reset(R);
    muA_delete(R, R->sorted_labels);
    muA_delete(R, R->groups);
    muA_delete(R, R->clusters);
    muA_delete(R, R->ll_cache);
    muA_delete(R, R->width_cache);
    muA_delete(R, R->labels);
    muA_delete(R, R->helps);
    muA_delete(R, R->notes);
    muM_free(&R->alloc, R, sizeof(mu_Report));
}
MU_API int mu_config(mu_Report *R, const mu_Config *config) {
    unsigned i, size;
    mu_Chunk ellipsis;
    if (!R || !config) return MU_ERRPARAM;
    R->config = config;
    ellipsis = (*config->char_set)[MU_DRAW_ELLIPSIS];
    R->ellipsis_width =
        muD_strwidth(mu_lslice(ellipsis + 1, *ellipsis), config->ambiwidth);
    for (i = 0, size = muA_size(R->labels); i < size; ++i) {
        mu_Label *label = &R->labels[i];
        label->width = muD_strwidth(label->message, config->ambiwidth);
    }
    return MU_OK;
}
MU_API int mu_title(mu_Report *R, mu_Level l, mu_Slice custom, mu_Slice msg) {
    if (!R) return MU_ERRPARAM;
    R->level = l;
    R->custom_level = custom;
    R->title = msg;
    return MU_OK;
}
MU_API int mu_code(mu_Report *R, mu_Slice code) {
    if (!R) return MU_ERRPARAM;
    return R->code = code, MU_OK;
}
MU_API int mu_label(mu_Report *R, size_t start, size_t end, mu_Id src_id) {
    mu_Label *label;
    if (!R) return MU_ERRPARAM;
    label = muA_push(R, R->labels);
    memset(label, 0, sizeof(mu_Label));
    label->start_pos = start;
    label->end_pos = end;
    label->src_id = src_id;
    return MU_OK;
}
MU_API int mu_message(mu_Report *R, mu_Slice msg, int width) {
    mu_Label *label = muM_checklabel(R);
    if (!label || !msg.p) return MU_ERRPARAM;
    label->message = msg;
    if (width > 0) label->width = width;
    else label->width = muD_strwidth(label->message, R->config->ambiwidth);
    return MU_OK;
}
MU_API int mu_color(mu_Report *R, mu_Color *color, void *ud) {
    mu_Label *label = muM_checklabel(R);
    if (!label || !color) return MU_ERRPARAM;
    return label->color = color, label->ud = ud, MU_OK;
}
MU_API int mu_primary(mu_Report *R) {
    mu_Label *label = muM_checklabel(R);
    if (!label) return MU_ERRPARAM;
    return label->primary = 1, MU_OK;
}
MU_API int mu_order(mu_Report *R, int order) {
    mu_Label *label = muM_checklabel(R);
    if (!label) return MU_ERRPARAM;
    return label->order = order, MU_OK;
}
MU_API int mu_priority(mu_Report *R, int priority) {
    mu_Label *label = muM_checklabel(R);
    if (!label) return MU_ERRPARAM;
    return label->priority = priority, MU_OK;
}
MU_API int mu_help(mu_Report *R, mu_Slice help_msg) {
    if (!R || !help_msg.p) return MU_ERRPARAM;
    return *muA_push(R, R->helps) = help_msg, MU_OK;
}
MU_API int mu_note(mu_Report *R, mu_Slice note_msg) {
    if (!R || !note_msg.p) return MU_ERRPARAM;
    return *muA_push(R, R->notes) = note_msg, MU_OK;
}