src/ffi_generated.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const MU_VERSION_MAJOR: u32 = 0;
pub const MU_VERSION_MINOR: u32 = 5;
pub const MU_VERSION_PATCH: u32 = 0;
pub const MU_CHUNK_MAX_SIZE: u32 = 63;
pub const MU_COLOR_CODE_SIZE: u32 = 32;
pub const MU_ERRPARAM: i32 = -1;
pub const MU_ERRSRC: i32 = -2;
pub const MU_ERRLINE: i32 = -3;
pub const MU_ERRFILE: i32 = -4;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mu_Level {
    MU_ERROR = 0,
    MU_WARNING = 1,
    MU_CUSTOM_LEVEL = 2,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mu_IndexType {
    MU_INDEX_BYTE = 0,
    MU_INDEX_CHAR = 1,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mu_LabelAttach {
    MU_ATTACH_MIDDLE = 0,
    MU_ATTACH_START = 1,
    MU_ATTACH_END = 2,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mu_ColorKind {
    MU_COLOR_RESET = 0,
    MU_COLOR_ERROR = 1,
    MU_COLOR_WARNING = 2,
    MU_COLOR_KIND = 3,
    MU_COLOR_MARGIN = 4,
    MU_COLOR_SKIPPED_MARGIN = 5,
    MU_COLOR_UNIMPORTANT = 6,
    MU_COLOR_NOTE = 7,
    MU_COLOR_LABEL = 8,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum mu_Draw {
    MU_DRAW_SPACE = 0,
    MU_DRAW_NEWLINE = 1,
    MU_DRAW_LBOX = 2,
    MU_DRAW_RBOX = 3,
    MU_DRAW_COLON = 4,
    MU_DRAW_HBAR = 5,
    MU_DRAW_VBAR = 6,
    MU_DRAW_XBAR = 7,
    MU_DRAW_VBAR_GAP = 8,
    MU_DRAW_LINE_MARGIN = 9,
    MU_DRAW_UARROW = 10,
    MU_DRAW_RARROW = 11,
    MU_DRAW_LTOP = 12,
    MU_DRAW_MTOP = 13,
    MU_DRAW_RTOP = 14,
    MU_DRAW_LBOT = 15,
    MU_DRAW_MBOT = 16,
    MU_DRAW_RBOT = 17,
    MU_DRAW_LCROSS = 18,
    MU_DRAW_RCROSS = 19,
    MU_DRAW_LUNDERBAR = 20,
    MU_DRAW_MUNDERBAR = 21,
    MU_DRAW_RUNDERBAR = 22,
    MU_DRAW_SUNDERBAR = 23,
    MU_DRAW_UNDERLINE = 24,
    MU_DRAW_ELLIPSIS = 25,
    MU_DRAW_COUNT = 26,
}
pub type mu_Chunk = *const ::std::os::raw::c_char;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Report {
    _unused: [u8; 0],
}
pub type mu_Allocf = ::std::option::Option<
    unsafe extern "C" fn(
        ud: *mut ::std::os::raw::c_void,
        p: *mut ::std::os::raw::c_void,
        nsize: usize,
        osize: usize,
    ) -> *mut ::std::os::raw::c_void,
>;
pub type mu_Color = ::std::option::Option<
    unsafe extern "C" fn(ud: *mut ::std::os::raw::c_void, kind: mu_ColorKind) -> mu_Chunk,
>;
pub type mu_Writer = ::std::option::Option<
    unsafe extern "C" fn(
        ud: *mut ::std::os::raw::c_void,
        data: *const ::std::os::raw::c_char,
        len: usize,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Slice {
    pub p: *const ::std::os::raw::c_char,
    pub e: *const ::std::os::raw::c_char,
}
pub type mu_Charset = [mu_Chunk; 26usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Config {
    pub compact: ::std::os::raw::c_int,
    pub cross_gap: ::std::os::raw::c_int,
    pub multiline_arrows: ::std::os::raw::c_int,
    pub underlines: ::std::os::raw::c_int,
    pub minimise_crossings: ::std::os::raw::c_int,
    pub align_messages: ::std::os::raw::c_int,
    pub context_lines: ::std::os::raw::c_int,
    pub tab_width: ::std::os::raw::c_int,
    pub limit_width: ::std::os::raw::c_int,
    pub ambiwidth: ::std::os::raw::c_int,
    pub label_attach: mu_LabelAttach,
    pub index_type: mu_IndexType,
    pub color: mu_Color,
    pub color_ud: *mut ::std::os::raw::c_void,
    pub char_set: *const mu_Charset,
}
pub type mu_ColorCode = [::std::os::raw::c_char; 32usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_ColorGen {
    pub state: [::std::os::raw::c_ushort; 3usize],
    pub min_brightness: f32,
}
pub type mu_CL = *const mu_Line;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Allocator {
    pub ud: *mut ::std::os::raw::c_void,
    pub allocf: mu_Allocf,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Cache {
    pub size: usize,
    pub alloc: mu_Allocator,
    pub sources: *mut *mut mu_Source,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Source {
    pub cache: mu_Cache,
    pub self_: *mut mu_Cache,
    pub name: mu_Slice,
    pub lines: *mut mu_Line,
    pub line_no_offset: ::std::os::raw::c_int,
    pub inited: ::std::os::raw::c_int,
    pub init:
        ::std::option::Option<unsafe extern "C" fn(src: *mut mu_Source) -> ::std::os::raw::c_int>,
    pub free: ::std::option::Option<unsafe extern "C" fn(src: *mut mu_Source)>,
    pub get_line: ::std::option::Option<
        unsafe extern "C" fn(src: *mut mu_Source, line_no: ::std::os::raw::c_uint) -> mu_Slice,
    >,
    pub get_line_info: ::std::option::Option<
        unsafe extern "C" fn(src: *mut mu_Source, line_no: ::std::os::raw::c_uint) -> mu_CL,
    >,
    pub line_count:
        ::std::option::Option<unsafe extern "C" fn(src: *mut mu_Source) -> ::std::os::raw::c_uint>,
    pub line_for_chars: ::std::option::Option<
        unsafe extern "C" fn(
            src: *mut mu_Source,
            char_pos: usize,
            out: *mut mu_CL,
        ) -> ::std::os::raw::c_uint,
    >,
    pub line_for_bytes: ::std::option::Option<
        unsafe extern "C" fn(
            src: *mut mu_Source,
            byte_pos: usize,
            out: *mut mu_CL,
        ) -> ::std::os::raw::c_uint,
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mu_Line {
    pub offset: usize,
    pub byte_offset: usize,
    pub len: ::std::os::raw::c_uint,
    pub byte_len: ::std::os::raw::c_uint,
    pub newline: ::std::os::raw::c_uint,
}
unsafe extern "C" {
    pub fn mu_new(allocf: mu_Allocf, ud: *mut ::std::os::raw::c_void) -> *mut mu_Report;
    pub fn mu_reset(R: *mut mu_Report);
    pub fn mu_delete(R: *mut mu_Report);
    pub fn mu_config(R: *mut mu_Report, config: *const mu_Config) -> ::std::os::raw::c_int;
    pub fn mu_label(
        R: *mut mu_Report,
        start: usize,
        end: usize,
        src_id: mu_Id,
    ) -> ::std::os::raw::c_int;
    pub fn mu_message(
        R: *mut mu_Report,
        msg: mu_Slice,
        width: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
    pub fn mu_color(
        R: *mut mu_Report,
        color: mu_Color,
        ud: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
    pub fn mu_primary(R: *mut mu_Report) -> ::std::os::raw::c_int;
    pub fn mu_order(R: *mut mu_Report, order: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
    pub fn mu_priority(R: *mut mu_Report, priority: ::std::os::raw::c_int)
        -> ::std::os::raw::c_int;
    pub fn mu_title(
        R: *mut mu_Report,
        l: mu_Level,
        custom: mu_Slice,
        msg: mu_Slice,
    ) -> ::std::os::raw::c_int;
    pub fn mu_code(R: *mut mu_Report, code: mu_Slice) -> ::std::os::raw::c_int;
    pub fn mu_help(R: *mut mu_Report, help_msg: mu_Slice) -> ::std::os::raw::c_int;
    pub fn mu_note(R: *mut mu_Report, note_msg: mu_Slice) -> ::std::os::raw::c_int;
    pub fn mu_writer(
        R: *mut mu_Report,
        writer: mu_Writer,
        ud: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
    pub fn mu_render(R: *mut mu_Report, cache: *const mu_Cache) -> ::std::os::raw::c_int;
    pub fn mu_ascii() -> *const mu_Charset;
    pub fn mu_unicode() -> *const mu_Charset;
    pub fn mu_default_color(ud: *mut ::std::os::raw::c_void, kind: mu_ColorKind) -> mu_Chunk;
    pub fn mu_initconfig(config: *mut mu_Config);
    pub fn mu_initcolorgen(cg: *mut mu_ColorGen, min_brightness: f32);
    pub fn mu_gencolor(cg: *mut mu_ColorGen, out: *mut mu_ColorCode);
    pub fn mu_fromcolorcode(ud: *mut ::std::os::raw::c_void, kind: mu_ColorKind) -> mu_Chunk;
    pub fn mu_newcache(allocf: mu_Allocf, ud: *mut ::std::os::raw::c_void) -> *mut mu_Cache;
    pub fn mu_delcache(C: *mut mu_Cache);
    pub fn mu_sourcecount(C: *const mu_Cache) -> ::std::os::raw::c_uint;
    pub fn mu_addsource(pC: *mut *mut mu_Cache, size: usize, name: mu_Slice) -> *mut mu_Source;
    pub fn mu_addmemory(pC: *mut *mut mu_Cache, data: mu_Slice, name: mu_Slice) -> *mut mu_Source;
    pub fn mu_source(R: *mut mu_Report) -> *mut mu_Source;
    pub fn mu_updatelines(src: *mut mu_Source, data: mu_Slice);
    pub fn mu_linecount(src: *mut mu_Source) -> ::std::os::raw::c_uint;
    pub fn mu_getline(src: *mut mu_Source, line_no: ::std::os::raw::c_uint) -> mu_CL;
    pub fn mu_lineforchars(
        src: *mut mu_Source,
        char_pos: usize,
        out: *mut mu_CL,
    ) -> ::std::os::raw::c_uint;
    pub fn mu_lineforbytes(
        src: *mut mu_Source,
        byte_pos: usize,
        out: *mut mu_CL,
    ) -> ::std::os::raw::c_uint;
}
